// Copyright (c) 2018 Cisco and/or its affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at:
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// Package ksrapi defines the data model for KSR plugin's northbound API.
package ksrapi;

// KsrStats holds statistics for an individual KSR type
message KsrStats {
    // Number of add operations.
    uint64 Adds = 1;

    // Number of delete operations.
    uint64 Updates = 2;

    // Number of delete operations.
    uint64 Deletes = 3;

    // Number of data store resync runs.
    uint64 Resyncs = 4;

    // Number of add operation errors.
    uint64 AddErrors = 5;

    // Number of delete operation errors.
    uint64 UpdErrors = 6;

    // Number of delete operation errors.
    uint64 DelErrors = 7;

    // Number of operations where one or more arguments were invalid.
    uint64 ArgErrors = 8;

    // Number of of data store resync errors.
    uint64 ResErrors = 9;
}

// Stats holds aggregated statistics for all KSR types in the KSR process.
message Stats {
    // Statistics for the Namespace Reflector
    KsrStats namespaceStats = 1;

    // Statistics for the Pod Reflector
    KsrStats podStats = 2;

    // Statistics for the Network Policy Reflector
    KsrStats policyStats = 3;

    // Statistics for the Endpoints Reflector
    KsrStats endpointsStats = 4;

    // Statistics for the Service Reflector
    KsrStats serviceStats = 5;

    // Statistics for the Node Reflector
    KsrStats nodeStats = 6;
}